2008-07-02  Akira TAGOH  <tagoh@redhat.com>

	* tests/imsettings-request.c: New testcase.

	* src/factory_info.c (imsettings_info_manager_validate_from_file_info):
	Fix a regression - validate xinputrc and .xinputrc as well.

2008-07-02  Akira TAGOH  <tagoh@redhat.com>

	* m4macros/tar.m4: get rid of h option for tar to include a dangling
	symlink for testcase.

	* tests/testcases/Makefile.am (dist-hook): include all the testcases
	into the archive.

2008-06-30  Akira TAGOH  <tagoh@redhat.com>

	* tests/gcit_11.c: new testcase for Issue#11.

	* src/factory_info.c (imsettings_info_manager_validate_from_file_info):
	check the config file's suffix (Issue#11).

2008-06-26  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/main.c (main): unref the main loop.

	* src/factory_info.c (main): unref the main loop.

	* backends/xim/main.c (main): unref the main loop.

	* src/factory.c (main): unref the main loop.

2008-06-18  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_finalize): unset the selection
	owner.

	* backends/xim/utils.c (xim_lookup_atom): deal with the X event in
	the queue before doing something.

	* backends/xim/server.c (xim_server_set_property): work around for
	a dalay until IM is ready. (rhbz#451753)

	* src/factory.c (imsettings_manager_real_what_im_is_running):
	Fix a typo. always saying IM is running if no .xinputrc.

2008-06-17  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): exit if can't get the session bus.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-list.c (main): likewise.

	* utils/imsettings-stop.c (main): Fix a typo in the help
	message. (rhbz#451739)

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* backends/xim/main.c (main): do not unref the instance of
	IMSettingsInfo during referring the information in IMSettingsInfo